src/system/prometheus-community/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus
  namespace: system
  annotations:
    kubernetes.io/ingress.class: "nginx"
#    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - prometheus.magnifikboutique.online
    secretName: prometheus-tls
  rules:
  - host: prometheus.magnifikboutique.online
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus-community-kube-prometheus
            port:
              number: 9090
